# mosespy

./: .gitmodules  CMakeLists.txt  Makefile.am  MosesPyDocumentation.md  ProjectHome.md  README  README.txt  RELEASE  config.h.in  configure.ac  configure.in  make-release  make-release-dev  regenerate-makefiles.sh  run_experiment.py
cmake/: UseLATEX.cmake
cswa/: main.cpp
data/tests/: subtitles.fr
doc/: CMakeLists.txt  LMFileFormats.tex  RELEASE  gettingStarted.tex  installation.tex  introduction.tex  irstlm-manual.tex  ngt.tex  releaseNotes.tex
example/chunkLM/: Makefile.am  interpolateLM.cfg  map.micro2macro  test  test.en  test.en-micro  test.macro  test.micro  test.sh  train.en-micro.blm  train.en.blm  train.lmmacro  train.lmmacro.header-en  train.lmmacro.header-micro  train.lmmacro.macro  train.macro.blm  train.micro.blm
irstlm.xcodeproj/: project.pbxproj
mosespy/: analyser.py  compile.py  config.py  corpus.py  datadivision.py  evaluation.py  experiment.py  install.py  moses_mpi.sh  moses_parallel.py  mosespy.py  moseswrapper.py  nlp.py  nlptools.py  nlputils.py  opensubtitles_cleanup.py  opus2moses2.py  paths.py  pathutils.py  preprocessing.py  process.py  processing.py  shellutils.py  slurm.py  slurmutils.py  subtitles_cleanup.py  system.py  testunits.py  textutils.py  utils.py
mosespy/data/: analyser.js  en.dic  fr.dic  subtitles.en
mosespy/urwid/: canvas.py  container.py  curses_display.py  decoration.py  graphics.py  listbox.py  signals.py  split_repr.py  text_layout.py  treetools.py  util.py  vterm.py  web_display.py  widget.py  wimp.py
mosespy/urwid/tests/: test_container.py  test_decoration.py  test_doctests.py  test_graphics.py  test_str_util.py  test_text_layout.py  util.py
scripts/: CMakeLists.txt  Makefile.am  add-start-end.sh  build-lm-qsub.sh  build-lm.sh  build-sublm.pl  mdtsel.sh  merge-sublm.pl  opus2moses2.py  plsa.sh  rm-start-end.sh  split-ngt.sh
scripts/data/: en.dic
scripts/other/: astyle_Darwin  astyle_Linux
src/: CMakeLists.txt  Makefile.am  cmd.c  cmd.h  compile-lm.cpp  cplsa.cpp  cplsa.h  cswa.cpp  cswam.cpp  cswam.h  dict.cpp  dictionary.cpp  dictionary.h  doc.cpp  doc.h  dtsel.cpp  gzfilebuf.h  htable.cpp  htable.h  index.h  interplm.cpp  interplm.h  interpolate-lm.cpp  linearlm.cpp  linearlm.h  lmContainer.cpp  lmContainer.h  lmInterpolation.cpp  lmInterpolation.h  lmclass.cpp  lmclass.h  lmmacro.cpp  lmmacro.h  lmtable.cpp  lmtable.h  mdiadapt.cpp  mdiadapt.h  mempool.cpp  mempool.h  mfstream.cpp  (+25 more)
trunk/: run_experiment.py
trunk/mosespy/: analyser.py  config.py  constants.py  corpus.py  datadivision.py  evaluation.py  experiment.py  install.py  moses_mpi.sh  moses_parallel.py  mosespy.py  moseswrapper.py  nlp.py  nlptools.py  nlputils.py  opensubtitles_cleanup.py  opus2moses2.py  pathutils.py  process.py  processing.py  shellutils.py  slurm.py  slurmutils.py  subtitles_cleanup.py  syscalls.py  system.py  testunits.py  textutils.py  utils.py
trunk/mosespy/data/: nl.dic  withduplicates.txt
trunk/mosespy/urwid/: __init__.py  display_common.py  escape.py  font.py  html_fragment.py  main_loop.py  monitored_list.py  old_str_util.py  raw_display.py  treetools.py
trunk/mosespy/urwid/tests/: test_canvas.py  test_event_loops.py  test_listbox.py  test_util.py  test_vterm.py  test_widget.py
trunk/scripts/: ngrams2dict.py  opus2moses2.py
trunk/scripts/data/: en.dic  fr.dic
wiki/: MosesPyDocumentation.wiki  PageName.wiki
